# numerical

./: CMakeLists.txt  Doxyfile  README.md  main.c
include/celestial/: ivp_solver.h  roots_solver.h
ode_solver/: ivp_solver.c  ivp_solver.h
roots/: roots_solver.c  roots_solver.h
src/: ivp_solver.c  roots_solver.c
